--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,6 @@
 before_script:
   - "curl -sSf https://static.rust-lang.org/rustup.sh | sh -s -- --channel=nightly --disable-sudo --yes"
 
-stages:
-  - test
-  - bench
-
 test_job:
   stage: test
   script:
@@ -14,3 +10,13 @@ bench_job:
   stage: bench
   script:
     - cargo bench --features="random"
+
+pages:
+  stage: deploy
+  script:
+    - cargo doc
+  artifacts:
+    paths:
+      - target/doc
+  only:
+    - master
