Another .gitlab-ci.yml update
It seems that `public` is the required path for static content.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,9 @@ pages:
   stage: deploy
   script:
     - cargo doc
+    - mv target/doc public
   artifacts:
     paths:
-      - target/doc
+      - public
   only:
     - master
