Add `Other` constructor to `{En,De}codeError`.
Change `DecodeError::DuplicateKey` to hold a `Key` instead of a boxed
`Debug` value.

Replace serde and serde-json test dependencies with json-codec.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name          = "cbor-codec"
-version       = "0.5.0"
+version       = "0.6.0"
 authors       = ["Toralf Wittner <tw@dtex.org>"]
 license       = "MPL-2.0"
 description   = "CBOR Codec implementation"
@@ -23,13 +23,11 @@ version  = ">= 0.2.21"
 optional = true
 
 [dev-dependencies]
+json-codec        = ">= 0.3"
 quickcheck        = ">= 0.2.21"
 quickcheck_macros = ">= 0.2.21"
-rand              = ">  0.3.0"
-rustc-serialize   = ">  0.3.0"
-serde             = ">= 0.5.0"
-serde_json        = ">= 0.5.0"
-serde_macros      = ">= 0.5.0"
+rand              = ">= 0.3"
+rustc-serialize   = ">= 0.3"
 
 [[test]]
 name = "tests"
